--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
+        android:paddingStart="16dp"
         android:paddingBottom="8dp"
         android:textAppearance="?android:textAppearanceMedium"
         tools:text="Empty Category" />
