--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_anim_home"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:id="@+id/nav_feeds"
+            android:icon="@drawable/ic_anim_feeds"
             android:title="@string/menu_feeds" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:id="@+id/nav_tmrmaker"
+            android:icon="@drawable/ic_anim_info"
             android:title="@string/menu_tmrmaker" />
+        <item
+            android:id="@+id/nav_settings"
+            android:layout_gravity="bottom"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/menu_settings" />
     </group>
+
 </menu>
