--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_tmrmaker">
 
     <fragment
         android:id="@+id/nav_home"
@@ -12,14 +12,20 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_feeds"
         android:name="com.jery.feedformulation.ui.feedslist.FeedsFragment"
         android:label="@string/menu_feeds"
         tools:layout="@layout/fragment_feeds" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_tmrmaker"
         android:name="com.jery.feedformulation.ui.tmrmaker.TmrmakerFragment"
         android:label="@string/menu_tmrmaker"
         tools:layout="@layout/fragment_tmrmaker" />
+
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.jery.feedformulation.ui.settings.SettingsFragment"
+        android:label="@string/menu_settings" />
+
 </navigation>
